<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sharer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="messagePlaceHolder">Input messages</string>
    <string name="imageDescription">The image to publish</string>
    <string name="postButtonText">Post</string>
    <string name="settingButtonText">Setting</string>
    <string name="postViewTitle">Post View</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="cameraButtonText">Camera</string>
    <string name="accountViewTitle">Account Setting</string>
    <string name="back">Back</string>
    <string name="app_id">FacebookAppID(xxxxxxxxxxx)</string>
    <string name="postProgessText">Posting&#8230;</string>
    <string name="accountProgressText">Connecting&#8230;</string>
    <string name="errorTitle">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="confirmText">Confirm</string>
    <string name="confirm_delete_image_text">Are you sure to deselect this image?</string>
    <string name="twitter_consumer_key">TwitterConsumerKey(xxxxxxxxxxxx)</string>
    <string name="twitter_consumer_secret">TwitterConsumerSecret(xxxxxxxxxxxxxxx)</string>
    <string name="title_activity_twitter_oauth">TwitterOAuthActivity</string>
    <string name="twitter_callbock_url">rosssharer://twitter</string>
    <string name="kakao_app_key">KakaoAppKey(xxxxxxxxxxxxx)</string>
    <string name="kakao_scheme">kakao+KakaoAppKey(kakaoxxxxxxxxxxxxxxx)</string>
    <string name="kakaostory_host">kakaostory</string>
    <string name="title_activity_kakao_login">KakaoLoginActivity</string>
    <string name="twitter_connect_error">Cannot connect to twitter.</string>
    <string name="signout_question_text">Sign Out?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="success_post_facebook">Success posting message to Facebook.</string>
    <string name="success_image_post_facebook">Success posting image to Facebook.</string>
    <string name="success_post_twitter">Success posting message to Twitter.</string>
    <string name="success_image_post_twitter">Success posting image to Twitter.</string>
    <string name="fail_post_twitter">Fail posting message to Twitter.</string>
    <string name="fail_image_post_twitter">Fail posting image to Twitter.</string>
    <string name="success_post_kakaostory">Success posting message to KakaoStory.</string>
    <string name="success_image_post_kakaostory">Success posting image to KakaoStory.</string>
    <string name="fail_post_kakaostory">Fail posting message to KakaoStory.</string>
    <string name="fail_image_post_kakaostory">Fail posting image to KakaoStory.</string>
    <string name="dialog_title">Post Result</string>
    <string name="com_kakao_kakaotalk_account">with KakaoTalk</string>
    <string name="com_kakao_other_kakaoaccount">with another KakaoAccount</string>
    <string name="com_kakao_account_cancel">Cancel</string>
</resources>
